force-app/main/default/objects/GRN__c/GRN__c.object-meta.xml
<CustomObject>
    <label>GRN</label>
    <pluralLabel>GRNs</pluralLabel>
    <nameField>
        <displayFormat>GRN-{0000}</displayFormat>
        <label>GRN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>PrimaryOrder__c</fullName>
        <label>Primary Order</label>
        <referenceTo>PrimaryOrder__c</referenceTo>
        <relationshipLabel>GRNs</relationshipLabel>
        <relationshipName>GRNs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScannerSessionId__c</fullName>
        <label>Scanner Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VarianceJSON__c</fullName>
        <label>Variance JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <validationRules>
        <fullName>Posted_DamagedQty_Check</fullName>
        <active>true</active>
        <description>Posted cannot be true if any GRNLine has DamagedQty > AcceptedQty</description>
        <errorConditionFormula>Posted__c = true</errorConditionFormula>
        <errorDisplayField>Posted__c</errorDisplayField>
        <errorMessage>Cannot post GRN with damaged quantity exceeding accepted quantity</errorMessage>
    </validationRules>
</CustomObject>