force-app/main/default/objects/GRN__c/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posted</label>
    <type>Checkbox</type>
</CustomField>