force-app/main/default/objects/GRN__c/fields/PrimaryOrder__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOrder__c</fullName>
    <label>PrimaryOrder</label>
    <referenceTo>PrimaryOrder__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>