force-app/main/default/objects/GRN__c/fields/ScannerSessionId__c.field-meta.xml
<CustomField>
    <fullName>ScannerSessionId__c</fullName>
    <label>ScannerSessionId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>