force-app/main/default/objects/GRN__c/fields/VarianceJSON__c.field-meta.xml
<CustomField>
    <fullName>VarianceJSON__c</fullName>
    <label>VarianceJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>